--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce</title>
-    
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <!-- Css -->
+    <link rel="stylesheet" href="./css/style.css">
+	<title>Proyecto</title>
 </head>
 <body>
+	<div class="container containerTitle">
+		<h1 class="title">Productos</h1>
+	</div>
+	<div class="">
+		<div class= "container">
+			<div id="articles__cards" class="row articles__cards d-flex flex-wrap">
+				
+			</div>
+		</div>
+	</div>
 
-<script src="./pages/simulador.js"></script>    
+<script src="./pages/producto.js"></script>
+<!-- scrip de Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<!-- script de fontawesome -->
+<script src="https://kit.fontawesome.com/9419242be9.js"
+crossorigin="anonymous"></script>
 </body>
 </html>
