se modificó la estructura de la carga de productos y se estiló

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 	<title>Proyecto</title>
 </head>
 <body>
-	<div class="container containerTitle">
-		<h1 class="title">Productos</h1>
-	</div>
-	<div class="">
-		<div class= "container">
-			<div id="articles__cards" class="row articles__cards d-flex flex-wrap">
-				
-			</div>
+	<div class="container position-absolute max-width: 100%">
+		<div class="container containerTitle"> 
+			<h1 class="title">Productos</h1>
+		</div>
+		<div id="articlesCards" class= "container row articlesCards d-flex flex-wrap">
+			
 		</div>
 	</div>
+	
 
 <script src="./pages/producto.js"></script>
 <!-- scrip de Bootstrap-->
