Se creo la estructura del carrito y se le dio funcionalidad al boton agregar al carrito

--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
 <body>
 	<div class="container position-absolute max-width: 100%">
 		<div class="container containerTitle"> 
-			<h1 class="title">Productos</h1>
+			<h1 class="title">Todos los productos</h1>
 		</div>
 		<div id="articlesCards" class= "container row articlesCards d-flex flex-wrap">
+			
+		</div><hr>
+		
+		<div class="container"> 
+			<h2 class="title bg-dark">Carrito de Compras</h2>
+		</div>
+		<div class="container"> 
+			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
+			<button class="btn btn-danger" id="vaciarCarrito">Limpiar Carrito</button>
+		</div>
+		<div id="cartContainer" class= "container row cart d-flex flex-wrap">
 			
 		</div>
 	</div>
