Se le dió funcionalidad a los botones del carrito

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 		<div class="container"> 
 			<h2 class="title bg-dark">Carrito de Compras</h2>
 		</div>
-		<div class="container"> 
-			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
-			<button class="btn btn-danger" id="vaciarCarrito">Limpiar Carrito</button>
-		</div>
 		<div id="cartContainer" class= "container row cart d-flex flex-wrap">
 			
+		</div>
+		<div class="container"> 
+			<button class="btn btn-dark" id="verCarrito">Ver Carrito</button>
+			<button class="btn btn-danger" id="vaciarCarrito">Limpiar</button>
+			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
 		</div>
 	</div>
 	
