--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 			<button class="btn btn-danger" id="vaciarCarrito">Limpiar</button>
 			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
 		</div>
+		<p>El total de la compra es <span id="total">$0</span></p>
 	</div>
 	
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> // Sweet Alert
 <script src="./pages/producto.js"></script>
-<!-- scrip de Bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-<!-- script de fontawesome -->
 <script src="https://kit.fontawesome.com/9419242be9.js"
 crossorigin="anonymous"></script>
 </body>
