--- a/index.html
+++ b/index.html
@@ -10,13 +10,49 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!-- Css -->
     <link rel="stylesheet" href="./css/style.css">
-	<title>Proyecto</title>
+	<title>Proyecto: Ecommerce</title>
 </head>
 <body>
-	<div class="container position-absolute max-width: 100%">
-		<div class="container containerTitle"> 
-			<h1 class="title">Todos los productos</h1>
+	<!-- Navbar -->
+	<nav class="navbar container-fluid fixed-top navbar-expand-md navbar-light">
+		<a class="navbar-brand d-flex navbarLogo" href="index.html">
+			<img class="logoImag" src="./multimedia/logo.jpg" alt="Logo">
+			<h1 class="logoTitle">DISTRIBUIDORA DROM</h1>
+		</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon text-reset"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="menu mx-auto mb-2 mb-lg-0 d-flex justify-content-between">
+				<li class="menuItem">
+					<a class="menuItemLink text-reset" href="#">Nosotros</a>
+				</li>
+				<li class="menuItem dropdown">
+					<a class="menuItemLink text-reset" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					Productos</a>
+					<ul class="submenu dropdown-menu position-absolute" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item text-reset" href="#">Todos</a></li>
+						<li><a class="dropdown-item text-reset" href="#">Escolar</a></li>
+						<li><a class="dropdown-item text-reset" href="#">Comercial</a></li>
+						<li><a class="dropdown-item text-reset" href="#">Papelera</a></li>
+					</ul>
+				</li>
+				<li class="menuItem">
+					<a class="menuItemLink text-reset" href="#" >Contacto</a>
+				</li>
+				<li class="menuItem">
+					<a class="menuItemLink text-reset" href="#" >Ingresar</a>
+				</li>
+			</ul>
 		</div>
+		<!-- Boton modal -->
+			<div>
+				<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#exampleModal"><i id="iconModal" class="iconModal fas fa-shopping-cart"></i>
+				<span id="contadorCarrito"></span></button>
+			</div>
+		</nav>
+		
+			
 		<div id="articlesCards" class= "container row articlesCards d-flex flex-wrap">
 			
 		</div><hr>
@@ -33,7 +69,7 @@
 			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
 		</div>
 		<p>El total de la compra es <span id="total">$0</span></p>
-	</div>
+	
 	
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> // Sweet Alert
 <script src="./pages/producto.js"></script>
