--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 					<a class="menuItemLink text-reset" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 					Productos</a>
 					<ul class="submenu dropdown-menu position-absolute" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item text-reset" href="#">Todos</a></li>
-						<li><a class="dropdown-item text-reset" href="#">Escolar</a></li>
-						<li><a class="dropdown-item text-reset" href="#">Comercial</a></li>
-						<li><a class="dropdown-item text-reset" href="#">Papelera</a></li>
+						<li><a class="dropdown-item text-reset" id="articleAll">Todos</a></li>
+						<li><a class="dropdown-item text-reset" id="articleEscolar">Escolar</a></li>
+						<li><a class="dropdown-item text-reset" id="articleComercial">Comercial</a></li>
+						<li><a class="dropdown-item text-reset" id="articlePapelera">Papelera</a></li>
 					</ul>
 				</li>
 				<li class="menuItem">
@@ -46,9 +46,9 @@
 			</ul>
 		</div>
 		<!-- Boton modal -->
-			<div>
+			<div id="verCarrito">
 				<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#exampleModal"><i id="iconModal" class="iconModal fas fa-shopping-cart"></i>
-				<span id="contadorCarrito"></span></button>
+				<span id="contadorCarrito">0</span></button>
 			</div>
 		</nav>
 		
@@ -57,18 +57,19 @@
 			
 		</div><hr>
 		
-		<div class="container"> 
-			<h2 class="title bg-dark">Carrito de Compras</h2>
+		<div id="cartContainer">
+			<div id="cart" class= "container row cart d-flex flex-wrap">
+				
+			</div>
+			<div>
+				<div class="container"> 
+				<button class="btn btn-danger" id="vaciarCarrito">Limpiar</button>
+				<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
+				</div>
+				<p>El total de la compra es <span id="total"></span></p>
+			</div>
 		</div>
-		<div id="cartContainer" class= "container row cart d-flex flex-wrap">
-			
-		</div>
-		<div class="container"> 
-			<button class="btn btn-dark" id="verCarrito">Ver Carrito</button>
-			<button class="btn btn-danger" id="vaciarCarrito">Limpiar</button>
-			<button class="btn btn-success" id="terminarCompra">Finalizar Compra</button>
-		</div>
-		<p>El total de la compra es <span id="total">$0</span></p>
+		
 	
 	
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> // Sweet Alert
