Se agrego fetch usando api local y localStorage,

--- a/index.html
+++ b/index.html
@@ -26,26 +26,12 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="menu mx-auto mb-2 mb-lg-0 d-flex justify-content-between">
-				<li class="menuItem">
-					<a class="menuItemLink text-reset" href="#">Nosotros</a>
-				</li>
-				<li class="menuItem dropdown">
-					<a class="menuItemLink text-reset" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-					Productos</a>
-					<ul class="submenu dropdown-menu position-absolute" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item text-reset" id="articleAll">Todos</a></li>
-						<li><a class="dropdown-item text-reset" id="articleEscolar">Escolar</a></li>
-						<li><a class="dropdown-item text-reset" id="articleComercial">Comercial</a></li>
-						<li><a class="dropdown-item text-reset" id="articlePapelera">Papelera</a></li>
-					</ul>
-				</li>
-				<li class="menuItem">
-					<a class="menuItemLink text-reset" href="#" >Contacto</a>
-				</li>
-				<li class="menuItem">
-					<a class="menuItemLink text-reset" href="#" >Ingresar</a>
-				</li>
-			</ul>
+				
+						<li class="menuItem"><a class="menuItemLink text-reset" id="articleAll">Todos</a></li>
+						<li class="menuItem"><a class="menuItemLink text-reset" id="articleEscolar">Escolar</a></li>
+						<li class="menuItem"><a class="menuItemLink text-reset" id="articleComercial">Comercial</a></li>
+						<li class="menuItem"><a class="menuItemLink text-reset" id="articlePapelera">Papelera</a></li>
+			</ul>				
 		</div>
 		<!-- Boton modal -->
 			<div id="verCarrito">
@@ -75,9 +61,12 @@
 	
 	 <!-- // Sweet Alert -->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="./pages/producto.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/9419242be9.js"
 crossorigin="anonymous"></script>
+<!-- Js -->
+<!-- <script src="./pages/carrito.js"></script> -->
+<script src="./pages/script.js"></script>
+
 </body>
 </html>
