Se realizaron cambios generales en los estilos

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 			
 		<div id="articlesCards" class= "container row articlesCards d-flex flex-wrap">
 			
-		</div><hr>
+		</div>
 		
-		<div id="cartContainer">
-			<div id="cart" class= "container row cart d-flex flex-wrap">
+		<div id="cartContainer" class= "cartContainer mx-auto">
+			<div id="cart" class= "container">
 				
 			</div>
 			<div>
